--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
 <meta name="Keywords" content="javascript, js, countdown, clock, timer, css, html, website, design, beautiful timer, countdown clock, countdown timer, javascript timer, javascript countdown clock, javascript countdown timer">
 
 <link rel="stylesheet" type="text/css" href="timer.css">
+<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
 	
 <body>
 	<div class="display">
 		<div id="clock" class="clock">
-			<h1 class="event_title">Live Event Starts in</h1>
 			<div id="numbers">
-				<span class="days"></span>
+				<span class="days" style="background-color:#000000; color: #000000;"></span>
 				<span class="hours"></span>
 				<span class="minutes"></span>
 				<span class="seconds"></span>
 			</div>
 			<div id="units">
-				<span>Days</span>
+				<span style="color:#000000">Days</span>
 				<span>Hours</span>
 				<span>Minutes</span>
 				<span>Seconds</span>
 			</div>
 		</div>
 		<div id="door" class="hide">
-			<h1 class="event_title">Event Is Live</h1>
-			<p class="action_caption">Click the button below to enter Live Stream</p>
-			<button class="call_to_action_button" type="button" onclick="liveStream()">Enter Live Stream!</button>
+			<h1 class="event_title">Acabou o tempo</h1>
 		</div>
-		<div class="author">Created by Katherine Adjahoe</div>
+		<div class="author"></div>
 	</div>
 	<script src="timer.js"></script>
 </body>
